--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>DigitalGirl</title>
+  <title>DigitalGirls</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -38,10 +38,10 @@
   <header id="header">
     <div class="container">
 
-      <h1><a href="index.html">DigitalGirl</a></h1>
+      <h1><a href="index.html">DigitalGirls</a></h1>
       <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <a href="index.html" class="mr-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a> -->
-      <h2><span>Exclusive cnft collection</span></h2>
+      <h2><span>Exclusive nft collection</span></h2>
 
       <nav id="navbar" class="navbar">
         <ul>
@@ -56,10 +56,10 @@
       </nav><!-- .navbar -->
 
       <div class="social-links">
-        <a href="https://twitter.com/DigitalGirlNFTs" target="_blank" class="twitter"><i class="bi bi-twitter"></i></a>
+        <a href="https://twitter.com/DigitalGirlsNFT" target="_blank" class="twitter"><i class="bi bi-twitter"></i></a>
         <a href="https://www.instagram.com/digitalgirlnfts/" target="_blank" class="instagram"><i class="bi bi-instagram"></i></a>
         <a href="https://discord.com/invite/ACuP2rYFkJ" target="_blank" class="discord"><i class="bi bi-discord"></i></a>
-        <a href="https://cnft.io/project/digitalgirl" target="_blank" class="cart"><i class="bx bxs-cart-alt"></i></a>
+        <a href="https://cnft.io/project/digitalgirl" target="_blank" class="cart"><i class="bx bx-cart"></i></a>
         <a href="https://www.jpg.store/collection/digitalgirl" target="_blank" class="cart"><i class="bx bxs-cart"></i></a>
          
       </div>
@@ -95,7 +95,7 @@
           <img src="assets/img/me.gif" class="img-fluid" alt="">
         </div>
         <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
-          <h3>This is the first ever launched photography based cnft collection</h3>
+          <h3>This is the first ever launched photography based nft collection on cardano blockchain</h3>
           <br>
           <br>
           <div class="row">
@@ -115,7 +115,7 @@
               <br>
               <br>
             </div>
-            <h3>Photos were made exclusively for this collection and are not used anywhere else. The model is also our team member</h3>              
+            <h3>Photos were made exclusively for this project and are not used anywhere else. The model is part of our team member</h3>              
           </div>
           <p>
             
@@ -134,7 +134,7 @@
       <div class="section-title">
         <h2>Team</h2>
         <p>Check&nbsp out&nbsp our&nbsp team</p>
-        <h4>Due to our privacy, the team will remain partially anonymous</h4>
+        <h4>Due to our privacy, the team must remain partially anonymous</h4>
       </div>
 
       <div class="row">
@@ -228,7 +228,7 @@
           <div class="icon-box">
             <div class="icon"><i class='bx bx-rocket' ></i></div>
             <h4>2023</h4>
-            <p>Launch of DigitalGirl V2 collection</p>
+            <p>Launch of DigitalGirls V2 collection</p>
           </div>
         </div>
 
@@ -393,7 +393,7 @@
 
   <div class="credits">
 
-    Copyright <i class='bx bx-copyright'></i> 2022 DigitalGirl</a>
+    Copyright <i class='bx bx-copyright'></i> 2022 DigitalGirls</a>
   </div>
 
   <!-- Vendor JS Files -->
