--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       <h1><a href="index.html">DigitalGirls</a></h1>
       <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <a href="index.html" class="mr-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a> -->
-      <h2><span>Exclusive nft collection</span></h2>
+      <h2><span>Exclusive nft<i class='bx bx-loader-circle bx-spin'></i>art collection</span></h2>
 
       <nav id="navbar" class="navbar">
         <ul>
