--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
 
       <div class="social-links">
         <a href="https://twitter.com/DigitalGirlsNFT" target="_blank" class="twitter"><i class="bi bi-twitter"></i></a>
-        <a href="https://www.instagram.com/digitalgirlnfts/" target="_blank" class="instagram"><i class="bi bi-instagram"></i></a>
+        <a href="https://www.instagram.com/digitalgirlsnft/" target="_blank" class="instagram"><i class="bi bi-instagram"></i></a>
         <a href="https://discord.com/invite/ACuP2rYFkJ" target="_blank" class="discord"><i class="bi bi-discord"></i></a>
-        <a href="https://cnft.io/project/digitalgirl" target="_blank" class="cart"><i class="bx bx-cart"></i></a>
+        <a href="https://cnft.io/project/digitalgirls" target="_blank" class="cart"><i class="bx bx-cart"></i></a>
         <a href="https://www.jpg.store/collection/digitalgirl" target="_blank" class="cart"><i class="bx bxs-cart"></i></a>
          
       </div>
