--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>DigitalGirls</title>
+  <title>Digital Girls</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -38,10 +38,10 @@
   <header id="header">
     <div class="container">
 
-      <h1><a href="index.html">DigitalGirls</a></h1>
+      <h1><a href="index.html">Digital&#8239 Girls</a></h1>
       <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <a href="index.html" class="mr-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a> -->
-      <h2><span>Exclusive nft<i class='bx bx-loader-circle bx-spin'></i>art collection</span></h2>
+      <h2><span>Exclusive nft&#8239<i class='bx bx-heart bx-burst bx-md'></i>art collection</span></h2>
 
       <nav id="navbar" class="navbar">
         <ul>
@@ -57,7 +57,7 @@
 
       <div class="social-links">
         <a href="https://twitter.com/DigitalGirlsNFT" target="_blank" class="twitter"><i class="bi bi-twitter"></i></a>
-        <a href="https://www.instagram.com/digitalgirlsnft/" target="_blank" class="instagram"><i class="bi bi-instagram"></i></a>
+        <a href="https://www.instagram.com/digitalgirlsnfts/" target="_blank" class="instagram"><i class="bi bi-instagram"></i></a>
         <a href="https://discord.com/invite/ACuP2rYFkJ" target="_blank" class="discord"><i class="bi bi-discord"></i></a>
         <a href="https://cnft.io/project/digitalgirls" target="_blank" class="cart"><i class="bx bx-cart"></i></a>
         <a href="https://www.jpg.store/collection/digitalgirl" target="_blank" class="cart"><i class="bx bxs-cart"></i></a>
@@ -228,7 +228,7 @@
           <div class="icon-box">
             <div class="icon"><i class='bx bx-rocket' ></i></div>
             <h4>2023</h4>
-            <p>Launch of DigitalGirls V2 collection</p>
+            <p>Launch of Digital Girls V2 collection</p>
           </div>
         </div>
 
@@ -393,7 +393,7 @@
 
   <div class="credits">
 
-    Copyright <i class='bx bx-copyright'></i> 2022 DigitalGirls</a>
+    Copyright <i class='bx bx-copyright'></i> 2022 Digital Girls</a>
   </div>
 
   <!-- Vendor JS Files -->
