--- a/index.html
+++ b/index.html
@@ -376,13 +376,13 @@
 
         <div class="col-md-6 d-flex align-items-stretch">
           <div class="info-box"> 
-            <a href="https://www.jpg.store/collection/digitalgirl" target="_blank" class="cart"><i class='bx bxs-cart'></i></i><span><h3>jpg.store</h3></span></a>
+            <a href="https://www.jpg.store/collection/digitalgirls" target="_blank" class="cart"><i class='bx bxs-cart'></i></i><span><h3>jpg.store</h3></span></a>
           </div>
         </div>
 
         <div class="col-md-6 d-flex align-items-stretch">
           <div class="info-box"> 
-            <a href="https://cnft.io/project/digitalgirl" target="_blank" class="cart"><i class='bx bxs-cart-alt'></i><span><h3>cnft.io</h3></span></a>
+            <a href="https://cnft.io/project/digital-girls" target="_blank" class="cart"><i class='bx bxs-cart-alt'></i><span><h3>cnft.io</h3></span></a>
           </div>
         </div>
 
