--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
               <br>
               <br>
             </div>
-            <h3>Photos were made exclusively for this project and are not used anywhere else. The model is part of our team member</h3>              
+            <h3>Photos were made exclusively for this project and are not used anywhere else. The model is also part of our team</h3>              
           </div>
           <p>
             
