--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
       <nav id="navbar" class="navbar">
         <ul>
           <li><a class="nav-link active" href="#header"><i class='bx bxs-home bx-sm' ></i>&nbspHome</a></li>
+          <li><a class="nav-link" href="#policy"><i class='bx bxs-id-card bx-sm'></i>&nbspPolicyID</a></li>
           <li><a class="nav-link" href="#about"><i class='bx bxs-info-square bx-sm' ></i>&nbspAbout</a></li>
           <li><a class="nav-link" href="#resume"><i class='bx bx-group bx-sm'></i>&nbspTeam</a></li>
           <li><a class="nav-link" href="#portfolio"><i class='bx bxs-image bx-sm'></i>&nbspGallery</a></li>
@@ -78,6 +79,18 @@
       
     </div>
   </header><!-- End Header -->
+
+    <!-- ======= Policy Section ======= -->
+    <section id="policy" class="policy">
+      <div class="container">
+  
+        <div class="section-title">
+          <h2>Policy ID</h2>
+          <br>
+          <p>c5d0c40aee4d555e902b256bdea6fb99c30f0784dc40a96e8ca0ed9c</p>
+  
+      </div>
+    </section><!-- End Policy Section -->
 
   <!-- ======= About Section ======= -->
   <section id="about" class="about">
