--- a/index.html
+++ b/index.html
@@ -87,9 +87,7 @@
         <div class="section-title">
           <h2>Policy ID</h2>
           <br>
-          <h7>c5d0c40aee4d555e902b256bdea6</h7>
-          <br>
-          <h7>fb99c30f0784dc40a96e8ca0ed9c</h7>
+          <h7>c5d0c40aee4d555e902b256bdea6fb99c30f0784dc40a96e8ca0ed9c</h7>
   
       </div>
     </section><!-- End Policy Section -->
@@ -173,7 +171,7 @@
           <h3 class="resume-title">THE MODEL</h3>
           <div class="resume-item">
             <h4>graphic design specialist</h4>
-            <h5>The muze of this project</h5></p>
+            <h5>The muze of the project</h5></p>
             <p>
             <ul>
               <li>Great posing skills</li>
