--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
           <li><a class="nav-link" href="#services"><i class='bx bx-directions bx-sm'></i>&nbspRoadmap</a></li>
           <li><a class="nav-link" href="#contact"><i class='bx bxs-cart bx-sm'></i>&nbspBuy</a></li>
         </ul>
-        <i class="bi bi-list mobile-nav-toggle"></i>
+        <i class="bi bi-list-ol mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
 
       <div class="social-links">
@@ -62,21 +62,23 @@
         <a href="https://discord.com/invite/ACuP2rYFkJ" target="_blank" class="discord"><i class="bi bi-discord"></i></a>
         <a href="https://cnft.io/project/digital-girls" target="_blank" class="cart"><i class="bx bx-cart"></i></a>
         <a href="https://www.jpg.store/collection/digitalgirls" target="_blank" class="cart"><i class="bx bxs-cart"></i></a>
-         
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br> 
       </div>
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-      
+ 
     </div>
   </header><!-- End Header -->
 
