--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
               <br>
               <br>
             </div>
-            <h3>Photos were made exclusively for this project and are not used anywhere else. The model is also part of our team</h3>              
+            <h3>Photos were made exclusively for this project. The model is also part of our team</h3>              
           </div>
           <p>
             
@@ -408,7 +408,7 @@
 
   <div class="credits">
 
-    Copyright <i class='bx bx-copyright'></i> 2022 Digital Girls</a>
+    Copyright <i class='bx bx-copyright'></i> 2022 - 2023 Digital Girls</a>
   </div>
 
   <!-- Vendor JS Files -->
