--- a/index.html
+++ b/index.html
@@ -408,7 +408,7 @@
 
   <div class="credits">
 
-    Copyright <i class='bx bx-copyright'></i> 2022 - 2023 Digital Girls</a>
+    Copyright <i class='bx bx-copyright'></i> 2022-2023 Digital Girls</a>
   </div>
 
   <!-- Vendor JS Files -->
