--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         <a href="https://twitter.com/DigitalGirlsNFT" target="_blank" class="twitter"><i class="bi bi-twitter"></i></a>
         <a href="https://www.instagram.com/digitalgirlsnfts/" target="_blank" class="instagram"><i class="bi bi-instagram"></i></a>
         <a href="https://discord.com/invite/ACuP2rYFkJ" target="_blank" class="discord"><i class="bi bi-discord"></i></a>
-        <a href="https://cnft.io/project/digital-girls" target="_blank" class="cart"><i class="bx bx-cart"></i></a>
+        <a href="https://tokhun.io/marketplace?project%5B0%5D=2507" target="_blank" class="cart"><i class="bx bx-cart"></i></a>
         <a href="https://www.jpg.store/collection/digitalgirls" target="_blank" class="cart"><i class="bx bxs-cart"></i></a>
         <br>
         <br>
@@ -242,7 +242,7 @@
         <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4">
           <div class="icon-box">
             <div class="icon"><i class='bx bx-rocket' ></i></div>
-            <h4>2023</h4>
+            <h4>2024</h4>
             <p>Launch of Digital Girls V2 collection</p>
           </div>
         </div>
@@ -397,7 +397,7 @@
 
         <div class="col-md-6 d-flex align-items-stretch">
           <div class="info-box"> 
-            <a href="https://cnft.io/project/digital-girls" target="_blank" class="cart"><i class='bx bxs-cart-alt'></i><span><h3>cnft.io</h3></span></a>
+            <a href="https://tokhun.io/marketplace?project%5B0%5D=2507" target="_blank" class="cart"><i class='bx bxs-cart-alt'></i><span><h3>tokhun.io</h3></span></a>
           </div>
         </div>
 
